# skratch_ros2

./: .gitignore  CMakeLists.txt  README.md  core.repos  local.yml  package.xml
.github/workflows/: main.yaml
config/: robot.rviz
launch/: robot.launch.py
skratch_bringup/: CMakeLists.txt  package.xml
skratch_bringup/config/: robot.rviz  skratch_controllers.yml
skratch_bringup/launch/: robot.launch.py  states.launch.py
tasks/: env.yml  ros.yml  rosdep.yml  tooling.yml  vcs.yml
